--- a/LojourProperties.Web/web.config
+++ b/LojourProperties.Web/web.config
@@ -13,7 +13,7 @@
   </system.web>
   <system.webServer>
     <httpErrors errorMode="Detailed" />
-    <!--<rewrite>
+    <rewrite>
       <rules>
         <rule name="httpTohttps" stopProcessing="true">
           <match url="^(.*)$" />
@@ -23,6 +23,6 @@
           <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
         </rule>
       </rules>
-    </rewrite>-->
+    </rewrite>
   </system.webServer>
 </configuration>
