--- a/LojourProperties.Web/LojourProperties.Web.csproj
+++ b/LojourProperties.Web/LojourProperties.Web.csproj
@@ -5,6 +5,9 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-LojourProperties.Web-45CFC40B-B84D-46D9-8B76-0C2E545D5EB5</UserSecretsId>
+
+	  <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
+	  <AspNetCoreModuleName>AspNetCoreModule</AspNetCoreModuleName>
   </PropertyGroup>
 
   <ItemGroup>
