--- a/LojourProperties.Web/appsettings.json
+++ b/LojourProperties.Web/appsettings.json
@@ -1,11 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sql5094.site4now.net;Database=DB_9AFABF_GlobalWebs;User Id=DB_9AFABF_GlobalWebs_admin;Password=Exwhyzee@2023;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=147.93.128.160,1433;Database=DB_9AFABF_Lojour;User Id=user_db;Password=Exwhyzee@123;TrustServerCertificate=True;MultipleActiveResultSets=true"
 
-
-
-
-    //"DefaultConnection": "Server=XYZ\\MSSQLSERVER01;Database=NewLojour121;Trusted_Connection=True;MultipleActiveResultSets=true"
+       
   },
   "Logging": {
     "LogLevel": {
@@ -23,4 +20,4 @@
 
 
 
-//Data Source=sql5094.site4now.net;Initial Catalog=DB_9AFABF_GlobalWebs;User Id=DB_9AFABF_GlobalWebs_admin;Password=YOUR_DB_PASSWORD
+ 
